[package]
name = "proto-server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["lib"]
path = "src/lib.rs"

[[bin]]
name = "proto-server"
path = "src/bin/main.rs"

[dependencies]
tokio = { version = "1.28.2", features = ["full"] }
tokio-util = { version = "0.7.8" , features = ["codec"] }
futures = "0.3.28"
futures-util = "0.3.28"
futures-core = "0.3.28"
thiserror = "1.0.30"
bytes = "1.4.0"
byteorder = "1.4.3"
crc = "3.0.1"
tracing = "0"
tracing-subscriber = "0.3"
dashmap = "5.5.0"
uuid = { version = "1.4.0", features = ["v4"] }


[profile.dev]
opt-level = 0
debug = true
split-debuginfo = '...'
debug-assertions = true
overflow-checks = true
lto = false
panic = 'unwind'
incremental = true
codegen-units = 256
rpath = false

[profile.release]
opt-level = 3
debug = false
split-debuginfo = '...'
debug-assertions = false
overflow-checks = false
lto = false
panic = 'unwind'
incremental = false
codegen-units = 16
rpath = false

[profile.dev.build-override]
opt-level = 0
codegen-units = 256
debug = false

[profile.release.build-override]
opt-level = 0
codegen-units = 256

